Many fixes to Kotlin frontent